gregando nuestro hero

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   </head>
   <body>
     <img src="./images/header.png" alt="imagen de header">
+    <img src="./images/hero.png" alt="imagen de hero">
   </body>
 </html>
