agregando guitarra clasica

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
   <body>
     <img src="./images/header.png" alt="imagen de header">
     <img src="./images/hero.png" alt="imagen de hero">
+    <img src="./images/acustica.jpg" alt="imagen de acustica">
   </body>
 </html>
