nueva version de invie - version verde

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </style>
   </head>
   <body>
-    <img src="./images/header.png" alt="imagen de header">
+    <img src="./images/nueva-version.png" alt="imagen nueva version de header">
     <img src="./images/hero.png" alt="imagen de hero">
     <img src="./images/acustica.jpg" alt="imagen de acustica">
   </body>
